# CnC_Generals_Zero_Hour

./: .gitignore  CMakeLists.txt  CMakePresets.json  codecov.yml  vcpkg-configuration.json  vcpkg.json
Common/Compat/: CMakeLists.txt  compat.h  d3dx8core.cpp  d3dx8math.cpp  d3dx8tex.cpp  d3dx8tex.h  intrin_compat.h  memory_compat.h  module_compat.h  osdep.h  string_compat.h  time_compat.cpp  time_compat.h  wchar_compat.h  windows.h
Common/Libraries/: CMakeLists.txt
Common/Libraries/Include/Lib/: BaseType.h
Common/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  agg_def.cpp  dazzle.cpp  ddsfile.cpp  dllist.h  dx8indexbuffer.cpp  dx8renderer.cpp  dx8webbrowser.h  dx8wrapper.h  dynamesh.cpp  hmorphanim.cpp  htree.cpp  intersec.cpp  lightenvironment.cpp  meshmdl.cpp  meshmdl.h  meshmdlio.cpp  metalmap.cpp  missingtexture.cpp  part_buf.cpp  pointgr.cpp  prim_anim.h  render2dsentence.cpp  rendobj.cpp  shader.h  sortingrenderer.cpp  soundrobj.h  streak.h  stripoptimizer.cpp  surfaceclass.cpp  textdraw.cpp  textdraw.h  texture.cpp  textureloader.cpp  w3d_dep.cpp  w3d_file.h  ww3d.cpp
Common/Libraries/Source/WWVegas/WWDebug/: CMakeLists.txt  wwdebug.cpp  wwdebug.h  wwmemlog.h  wwprofile.cpp  wwprofile.h
Common/Libraries/Source/WWVegas/WWDownload/: CMakeLists.txt  Download.cpp  FTP.CPP  ftp.h  registry.cpp
Common/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  always.h  bittype.h  buff.cpp  buff.h  chunkio.h  convert.cpp  cpudetect.h  data.cpp  ddraw.cpp  ffactory.cpp  int.cpp  iostruct.h  lcw.cpp  mempool.h  mmsys.h  mpu.cpp  multilist.h  point.h  random.cpp  random.h  rawfile.cpp  readline.cpp  readline.h  refcount.h  registry.cpp  sha.h  simplevec.h  stimer.cpp  targa.cpp  trim.cpp  vector.h  win.h  wwcomutil.cpp  wwfile.cpp  wwstring.cpp  wwstring.h
Common/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt  matrix3d.cpp
Common/Libraries/Source/WWVegas/WWSaveLoad/: CMakeLists.txt  persistfactory.h  pointerremap.h
Common/Tests/: CMakeLists.txt
Common/Tests/Compression/: CMakeLists.txt
Common/Tests/WWVegas/: CMakeLists.txt
Common/Tests/WWVegas/MathTest/: CMakeLists.txt  aaboxtest.cpp  mempooltest.cpp  obboxtest.cpp  raytest.cpp
Common/Tests/WWVegas/MeshTest/: CMakeLists.txt  meshtest.cpp
Common/Tests/WWVegas/WW3D2Test/: CMakeLists.txt  meshtest.cpp  texttest.cpp
Common/Tests/WWVegas/WWMathTest/: CMakeLists.txt  raytest.cpp
Common/Tools/wdump/: CMakeLists.txt  chunk_d.cpp  chunk_d.h  wdump.cpp  wdump.h  wdump.rc  wdumpwin.cpp  wdumpwin.h  wdumpwin.ui
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: ActionManager.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  BezierSegment.h  BuildAssistant.h  CRC.h  CriticalSection.h  Debug.h  DrawModule.h  GameAudio.h  GameCommon.h  GameLOD.h  GameMemory.h  GameType.h  Geometry.h  GlobalData.h  INI.h  KindOf.h  LocalFile.h  MapObject.h  MessageStream.h  Module.h  NameKeyGenerator.h  Player.h  Radar.h  STLTypedefs.h  Science.h  SpecialPower.h  SpecialPowerType.h  StackDump.h  Team.h  ThingSort.h  ThingTemplate.h  UnicodeString.h  Upgrade.h  Xfer.h
Generals/Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  CommandXlat.h  ControlBar.h  ControlBarScheme.h  Display.h  Drawable.h  Gadget.h  InGameUI.h  ParticleSys.h  RadiusDecal.h  Shadow.h  Shell.h  ShellHooks.h  TerrainVisual.h  View.h
Generals/Code/GameEngine/Include/GameLogic/: AI.h  AIPathfind.h  AIStateMachine.h  CrateSystem.h  Damage.h  GameLogic.h  GhostObject.h  Locomotor.h  Object.h  ObjectStatusBits.h  PartitionManager.h  ScriptActions.h  ScriptEngine.h  TerrainLogic.h  Weapon.h  WeaponSet.h  WeaponSetType.h  WeaponStatus.h
Generals/Code/GameEngine/Include/GameLogic/Module/: AIUpdate.h  BaikonurLaunchPower.h  BattlePlanUpdate.h  BodyModule.h  BoneFXDamage.h  CashHackSpecialPower.h  ContainModule.h  CrateCollide.h  DamageModule.h  DefectorSpecialPower.h  LaserUpdate.h  MaxHealthUpgrade.h  MissileAIUpdate.h  NeutronMissileUpdate.h  ParticleUplinkCannonUpdate.h  PhysicsUpdate.h  ProductionUpdate.h  SpawnBehavior.h  SpecialAbilityUpdate.h  SpecialPowerModule.h  UpdateModule.h
Generals/Code/GameEngine/Include/GameNetwork/: GameSpy.h  GameSpyChat.h  GameSpyGP.h  GameSpyGameInfo.h  LANPlayer.h
Generals/Code/GameEngine/Include/GameNetwork/GameSpy/: BuddyThread.h  PeerDefs.h  PeerThread.h  PersistentStorageThread.h  ThreadUtils.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/Common/: BitFlags.cpp  CRCDebug.cpp  GameEngine.cpp  GameLOD.cpp  GlobalData.cpp  MiniLog.cpp  RandomValue.cpp  Recorder.cpp  Version.cpp
Generals/Code/GameEngine/Source/Common/Audio/: GameSounds.cpp
Generals/Code/GameEngine/Source/GameClient/: Drawable.cpp  GameClient.cpp  GameText.cpp  GlobalLanguage.cpp  InGameUI.cpp  LanguageFilter.cpp  MapUtil.cpp
Generals/Code/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  DownloadManager.cpp  FileTransfer.cpp  FirewallHelper.cpp  GUIUtil.cpp  IPEnumeration.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANGameInfo.cpp  NetPacket.cpp  Network.cpp  Transport.cpp  udp.cpp
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/GameEngineDevice/Include/OpenALDevice/: FFmpegOpenALAudioStream.h  OpenALAudioManager.h  OpenALAudioStream.h
Generals/Code/GameEngineDevice/Source/OpenALDevice/: FFmpegOpenALAudioStream.cpp  OpenALAudioFileCache.cpp  OpenALAudioFileCache.h  OpenALAudioManager.cpp  OpenALAudioStream.cpp
Generals/Code/Libraries/: CMakeLists.txt
Generals/Code/Libraries/Include/Lib/: BaseType.h
Generals/Code/Libraries/Source/Compression/: CMakeLists.txt  CompressionManager.cpp
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  SDL3Main.cpp  WinMain.h
Generals/Code/Tools/: CMakeLists.txt
Generals/Code/Tools/PATCHGET/: CHATAPI.CPP
Generals/Code/Tools/buildVersionUpdate/: CMakeLists.txt  buildVersionUpdate.cpp
Generals/Code/Tools/matchbot/: generals.h
Generals/Code/Tools/versionUpdate/: CMakeLists.txt  versionUpdate.cpp
(+158 files in other folders)
